# ultra240

./: .gitignore  COPYING  LICENSE  Makefile.am  README.md  configure.ac  ultra240.pc.in
include/: .gitignore
include/ultra240/: animated_sprite.h  animation.h  config.h  controller_button.h  controller_hat.h  dynamic_library.h  entity.h  event.h  file.h  geometry.h  hash.h  image.h  key.h  path_manager.h  renderer.h  resource_loader.h  settings_manager.h  sprite.h  tileset.h  ultra.h  util.h  vector_allocator.h  window.h  world.h
share/doc/ultra240/: tileset.md  world.md
src/ultra/: Makefile.am  animated_sprite.cc  dynamic_library.h  entity.cc  error.h  image.cc  image.h  path_manager.h  renderer.cc  renderer.h  sprite.cc  tileset.cc  ultra.cc  ultra.h  util.cc  util.h  window.cc  world.cc
src/ultra-gl/: Makefile.am  mat4.c  renderer.cc
src/ultra-gl/shader/: frag.fsc  frag.fsh  shader.h  sprite.vsh  sprite_vert.glsl  tex.fsh  tex_geom.glsl  tile.vsh  tile_vert.glsl  vert.vsc
src/ultra-posix/: .gitignore  Makefile.am  dynamic_library.cc  file.cc  mkdirp.cc  mkdirp.h  path_manager.cc  resource_loader.cc  settings_manager.cc  util.cc
src/ultra-sdl/: Makefile.am  window.cc
src/ultra-sdl/shader/: box_vert.glsl  line_frag.glsl  line_geom.glsl  passthrough.glsl  quad.glsl  shader.h  sprite_vert.glsl  tex_frag.glsl  tex_geom.glsl  tile_vert.glsl
src/ultra-yaml/: Makefile.am  config.cc
