ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src/ultra-posix src/ultra-sdl src/ultra-yaml src/ultra

pkginclude_HEADERS = \
	include/ultra240/config.h \
	include/ultra240/controller_button.h \
	include/ultra240/controller_hat.h \
	include/ultra240/dynamic_library.h \
	include/ultra240/entity.h \
	include/ultra240/event.h \
	include/ultra240/file.h \
	include/ultra240/geometry.h \
	include/ultra240/hash.h \
	include/ultra240/key.h \
	include/ultra240/path_manager.h \
	include/ultra240/settings_manager.h \
	include/ultra240/tileset.h \
	include/ultra240/ultra.h \
	include/ultra240/util.h \
	include/ultra240/vector_allocator.h \
	include/ultra240/window.h \
	include/ultra240/world.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = ultra240.pc
