ACLOCAL_AMFLAGS = -Im4

SUBDIRS = \
	src/ultra-gl \
	src/ultra-posix \
	src/ultra

pkginclude_HEADERS = \
	include/ultra240/animated_sprite.h \
	include/ultra240/dynamic_library.h \
	include/ultra240/entity.h \
	include/ultra240/geometry.h \
	include/ultra240/hash.h \
	include/ultra240/renderer.h \
	include/ultra240/sprite.h \
	include/ultra240/tileset.h \
	include/ultra240/ultra.h \
	include/ultra240/util.h \
	include/ultra240/vector_allocator.h \
	include/ultra240/world.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = ultra240.pc
